--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,8 +128,7 @@ jobs:
         ls -la
     - name: Prepare Test directory
       run: 
-        chmod -R 777 ./Test &&
-        cd Test
+        chmod -R 777 ./Test 
     - name: Assign environment variables
       run: 
         export TOOL_DIRS=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin &&
@@ -139,12 +138,17 @@ jobs:
         export APP_TYPE=SecureApp 
         
     - name: Testing
-      run: ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
+      run:
+        cd Test/ &&
+        ls -la &&
+        ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
 
     - name: Generate test report
       run: 
+        cd Test/ &&
+        ls -la &&
         python test_script/get_report.py &&
-        cd ../
+
     - name: Upload results and logs
       uses: actions/upload-artifact@v4.3.4
       with:
@@ -187,14 +191,15 @@ jobs:
         export COMPONENT=${{ github.event.inputs.component }} 
         
       if: github.event_name	== 'workflow_dispatch'
+    
     - name: Check working directory
       run: 
         pwd &&
         ls -la
     - name: Prepare Test directory
       run: 
-        chmod -R 777 ./Test &&
-        cd Test
+        chmod -R 777 ./Test 
+
     - name: Assign environment variables
       run: 
         export TOOL_DIRS=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin &&
@@ -202,14 +207,19 @@ jobs:
         export HOST_IP=$HOST_IP &&
         export COMPILER=GCC &&
         export APP_TYPE=SecureApp 
-
+        
     - name: Testing
-      run: ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
+      run:
+        cd Test/ &&
+        ls -la &&
+        ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
 
     - name: Generate test report
       run: 
+        cd Test/ &&
+        ls -la &&
         python test_script/get_report.py &&
-        cd ../
+
     - name: Upload results and logs
       uses: actions/upload-artifact@v4.3.4
       with:
@@ -252,14 +262,15 @@ jobs:
         export COMPONENT=${{ github.event.inputs.component }} 
         
       if: github.event_name	== 'workflow_dispatch'
+    
     - name: Check working directory
       run: 
         pwd &&
         ls -la
     - name: Prepare Test directory
       run: 
-        chmod -R 777 ./Test &&
-        cd Test
+        chmod -R 777 ./Test 
+
     - name: Assign environment variables
       run: 
         whoami
@@ -268,12 +279,17 @@ jobs:
         export APP_TYPE=SecureApp
 
     - name: Testing
-      run: ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
+      run:
+        cd Test &&
+        ls -la &&
+        ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
 
     - name: Generate test report
       run:  
-        python test_script/get_report.py &&
-        cd ../
+        cd Test/ &&
+        ls -la &&
+        python test_script/get_report.py 
+
     - name: Upload results and logs
       uses: actions/upload-artifact@v4.3.4
       with:
@@ -316,28 +332,34 @@ jobs:
         export COMPONENT=${{ github.event.inputs.component }}
         
       if: github.event_name	== 'workflow_dispatch'
+  
     - name: Check working directory
       run: 
         pwd &&
         ls -la
     - name: Prepare Test directory
       run: 
-        chmod -R 777 ./Test &&
-        cd Test
+        chmod -R 777 ./Test 
+
     - name: Assign environment variables
       run: 
-        whoami &&
+        whoami
         export HOST_IP=$HOST_IP &&
         export TOOL_DIRS=/home/sqa/EmbeddedWorkbench8.4/arm/bin &&
         export APP_TYPE=SecureApp
 
     - name: Testing
-      run: ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
+      run:
+        cd Test &&
+        ls -la &&
+        ./execute_test.sh $COMMAND $COMPONENT $SERIAL_NUM $PLATFORM $COMPILER $SECURITY
 
     - name: Generate test report
-      run: 
-        python test_script/get_report.py &&
-        cd ../
+      run:  
+        cd Test/ &&
+        ls -la &&
+        python test_script/get_report.py 
+
     - name: Upload results and logs
       uses: actions/upload-artifact@v4.3.4
       with:
