--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,7 +101,7 @@ jobs:
         retention-days: 90
 
   job2:
-    if: github.event.inputs.test_mg12 == 'true'
+    if: (success() || failure()) && github.event.inputs.test_mg12 == 'true'
     needs: [job1]
     name: GCC-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
@@ -167,7 +167,7 @@ jobs:
         retention-days: 90
   
   job3:
-    if: github.event.inputs.test_mg24 == 'true'
+    if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
     needs: [job1, job2]
     name: GCC-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
@@ -236,7 +236,7 @@ jobs:
         retention-days: 90
   
   job4:
-    if: github.event.inputs.test_mg12 == 'true'
+    if: (success() || failure()) && github.event.inputs.test_mg12 == 'true'
     needs: [job1, job2, job3]
     name: IAR-MG12 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
@@ -304,7 +304,7 @@ jobs:
         retention-days: 90
   
   job5:
-    if: github.event.inputs.test_mg24 == 'true'
+    if: (success() || failure()) && github.event.inputs.test_mg24 == 'true'
     needs: [job1, job2, job3, job4]    
     name: IAR-MG24 regression test
     runs-on: [self-hosted, sqa-ds-hn-006]
